--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
   color-scheme: light dark;
   color: rgba(8, 8, 8, 0.87);
   background-color: #f9f9f9;
-
+  background-size: cover;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
