--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@
   color-scheme: light dark;
   color: rgba(8, 8, 8, 0.87);
   background-color: #f9f9f9;
+  background-image: url('https://copilot.microsoft.com/th/id/BCO.0deaf656-cb60-440b-be2a-a7e564d15e41.png');
   background-size: cover;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
